--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         estagiario em java, onde participei de um projeto de prototipagem com linguagem java 6, utilizando framework
         JSF com arquitetura Bradesco AWB 3.0. <br>
         Atualmente trabalho no grupo cruzeiro do sul como programador junior, participei de alguns projetos que utilizaram tecnolgias
-        como java com framework spring, Jquery, rabbitMQ, swagger para documentação<br>
+        como java com framework spring, Jquery, rabbitMQ, swagger para documentação.<br>
     </div>
   </section>
 
