alteração docks curriculo, alteração sobre mim

--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
   <section class="jumbotron text-center bg-light" id="sobre-mim">
     <div class="container">
       <h4 class="jumbotron-heading titulosPretos">Sobre mim</h4>
-      <p class="lead" align="justify">Eu tenho 27 anos,moro na zona leste de São Paulo, sou formado em Análise e
-        Desenvolvimento de Sistemas pela UNINOVE, iniciei a carreia como estagiario em cobol na BRQ, posteriormente migrei para
-        estagiario em java, onde participei de um projeto de prototipagem com linguagem java 6, utilizando framework
-        JSF com arquitetura Bradesco AWB 3.0. <br>
-        Atualmente trabalho no grupo cruzeiro do sul como programador junior, participei de alguns projetos que utilizaram tecnolgias
-        como java com framework spring, Jquery, rabbitMQ, swagger para documentação.<br>
+      <p class="lead" align="justify">Eu tenho 28 anos, moro na região leste da
+        cidade de São Paulo, atualmente como programador júnior com foco em java spring, e angular
+        8 com conhecimentos acadêmicos e básicos em algumas linguagens e
+        tecnologias tais como html, css, javaScript, nodeJs, Swagger, git, linux, com
+        noções em conceito de filas (RabbitMQ), docker, e criação de ambiente
+        wsl (virtualização linux no windows), também estudando pós graduação
+        em analise de dados com foco em BI e Big data.<br>
     </div>
   </section>
 
@@ -274,8 +275,8 @@
           <p>JavaScript</p>
           <progress max="100" value="30" class="JavaScript"></progress>
 
-          <p>React.Js</p>
-          <progress max="100" value="15" class="ReactJs"></progress>
+          <p>Angular.Js</p>
+          <progress max="100" value="15" class="AngularJs"></progress>
         </li>
 
         <li class="liback">
@@ -314,6 +315,22 @@
             <th scope="col">Término</th>
           </tr>
         </thead>
+        <tr>
+          <td>Angular Integração de API</td>
+          <td>Udemy</td>
+          <td>09/2020</td>
+        </tr>
+        <tr>
+          <td>SQL para Análises</td>
+          <td>Data Quântica</td>
+          <td>08/2020</td>
+        </tr>
+        <tr>
+          <td>Fundamentos de Big Data e Apache
+            Hadoop</td>
+          <td>Data Quântica</td>
+          <td>07/2020</td>
+        </tr>
         <tbody>
           <tr>
             <td>Docker</td>
