--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -30,9 +30,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-
-      </ul>
+      <ul class="navbar-nav mr-auto"></ul>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link textoBranco" href="#home">Home</a>
@@ -61,10 +59,6 @@
       <img class="foto-perfil" src="" alt="">
       <h1 class="jumbotron-heading textoBranco">Emerson Ferreira da Silva</h1>
       <p class="lead textoBranco">Programador Júnior</p>
-     <!-- <p>
-        <a href="#curriculo" class="btn btn-outline-light">Baixar Curriculo</a>
-      </p>
-      -->
       <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="_blank"> <i
           class="textoBranco fab fa-linkedin"></i></a>
       <a href="https://github.com/emfsilva" target="_blank"><i class="textoBranco icones fab fa-github"></i></a>
